syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "CrossChainContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";


message VoteCrossChainContract {
    bytes owner_address = 1;
    int64 register_num = 2;
    int64 amount = 3;
    int32 round = 4;
}

message UnvoteCrossChainContract {
    bytes owner_address = 1;
    int64 register_num = 2;
    int32 round = 3;
}

message AuctionRoundContract {
    int32 round = 1;
    int32 slot_count = 2;
    int64 end_time = 3;
    int64 duration = 4;
}